--- a/ASPCoreToDo/Views/ToDoGenerated/Index.cshtml
+++ b/ASPCoreToDo/Views/ToDoGenerated/Index.cshtml
@@ -22,11 +22,8 @@
                 @Html.DisplayNameFor(model => model.Descr)
             </th>
             <th>
-                Etat
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ValidationDate)
-            </th>
+                @Html.DisplayNameFor(model => model.State)
+            </th>         
             <th></th>
         </tr>
     </thead>
@@ -44,14 +41,11 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.State)
-            </td>
+            </td>          
             <td>
-                @Html.DisplayFor(modelItem => item.ValidationDate)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new {id=item.Id}) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id}) |
-                @Html.ActionLink("Delete", "Delete", new {id=item.Id })
+                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
             </td>
         </tr>
 }
