--- a/ASPCoreToDo/Views/User/Create.cshtml
+++ b/ASPCoreToDo/Views/User/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ASPCoreToDo.Models.User
+﻿@model ASPCoreToDo.Models.RegisterUser
 
 @{
     ViewData["Title"] = "Create";
@@ -6,12 +6,12 @@
 
 <h1>Create</h1>
 
-<h4>User</h4>
+<h4>RegisterUser</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>       
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Lastname" class="control-label"></label>
                 <input asp-for="Lastname" class="form-control" />
@@ -31,6 +31,11 @@
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Confirm" class="control-label"></label>
+                <input asp-for="Confirm" class="form-control" />
+                <span asp-validation-for="Confirm" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
